# dc-custom-component-template

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish_on_tag.yaml  tests.yaml
dc_custom_component/: __init__.py
dc_custom_component/your_custom_component/: src.py
src/custom_component/: src.py
src/dc_custom_component/: __about__.py
src/dc_custom_component/components/embedders/nvidia/: document_embedder.py  text_embedder.py
src/dc_custom_component/components/preprocessors/: character_splitter.py
src/dc_custom_component/example_components/preprocessors/: character_splitter.py
src/dc_custom_component/example_components/rankers/: keyword_booster.py  secret_keyword_booster.py
src/dc_custom_component/utils/nvidia/: __init__.py  nim_backend.py  triton_backend.py  utils.py
tests/: conftest.py  test_document_embedder.py  test_embedding_truncate_mode.py  test_text_embedder.py
tests/example_components/: test_keyword_booster.py
